--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "node server.js",
     "start": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test:golden": "node tests/runGolden.js",
+    "test:e2e": "npx playwright test",
+    "test": "npm run test:golden && npm run test:e2e"
   },
   "keywords": [],
   "author": "",
@@ -18,5 +20,8 @@
     "express": "^5.1.0",
     "openai": "^6.3.0",
     "postgres": "^3.4.7"
+  },
+  "devDependencies": {
+    "@playwright/test": "^1.49.0"
   }
 }
